# oss-directory

./: .eslintrc.json  .gitignore  .lintstagedrc  .prettierignore  .tmp  CLAUDE.md  EXAMPLE  README.md  action_summary.json  changes_made.txt  collection_operation_report.json  cursor.rules  deep_funding_repo_mapping.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  toml_adder_report.json
.github/workflows/: ci-default.yml  external-prs-handle-comment.yml  validate-pr-owners.yml
data/: test.ipynb
data/collections/: 0.exchange.yaml  01coin.yaml  0cash.yaml  0chain.yaml  0l network.yaml  0x.yaml  0x_nodes.yaml  0xbanana.yaml  0xbitcoin.yaml  0xcapsules.yaml  0xcert protocol.yaml  0xcert.yaml  0xfable.yaml  0xnoots.yaml  0xsplits.yaml  0xuniverse.yaml  1000blocks space.yaml  10k swap.yaml  123swap.yaml  1beam.yaml  1hive.yaml  1inch.yaml  1pixel red.yaml  1ramp.yaml  1sol.yaml  1swap.yaml  1world.yaml  1x short bitcoin token.yaml  24karat-gld.yaml  2gether.yaml  2i2i.yaml  2key.network.yaml  2pi ecosystem.yaml  33 labs.yaml  3box.yaml  3em.yaml  3xr.space.yaml  42-coin.yaml  451pcbcom.yaml  4everland.yaml  (+6249 more)
data/projects/: README.md  SuperchainSynergyHub.yaml  datacapstats.yaml  kromatika.yaml  opsight.yaml  ossd_repo_snapshot.yaml  readme.md  superchainsynergy.yaml  whalenizer-whalesofi.yaml
scripts/: generate-schema-docs.ts
src/: cli.ts  fetchData.ts  index.ts  types.ts
src/actions/: defillama.ts  migrate.ts  transform.ts  validate.ts  validate_logo.ts
src/migrations/: 2-blockchainAddressTypeToTags.ts  2-removeDuplicateAddressesFromProject.ts  3-blockchainConsolidate.ts  4-renameArbitrum.ts  5-schemav1.ts  6-addSocial.ts  7-snakecaseNetworks.ts  index.ts
src/ossdirectory/: __init__.py  clone.py  fetch.py  run.py  schema.py
src/resources/: __init__.py
src/scripts/: add-project.py  add_collection.py  add_contracts.py  add_orgs_from_csv.py  add_project.py  collection-from-json-list.ts  decouple-optimism-json.ts  dedupe_addresses.py  eas.py  github_csv.py  karmagap.py  map-artifacts.py  map_artifacts.py  merge-collections.ts  optimism-attestation.ts  ossinsight_importer.py  overwrite_addresses.py  packages_csv.py  remove-contracts.ts  rpgf3-adder.py  summarize.ts  toml_adder.py  trace_contracts.py  update_display_name.py  update_project.py  validate_addresses.py  write_yaml.py
src/transformations/: convertToLower.ts  countNetworks.ts  deployersToAnyEvm.ts  eoaToAnyEvm.ts  importAgora.ts  index.ts  sortCollection.ts
src/types/: blockchain-address.ts  cli.ts  collection.d.ts  collection.ts  custom.ts  (+6 more)
(+26137 files in other folders)
