[tool.poetry]
name = "oss-directory"
version = "0.2.5"
description = "Open source software directory"
authors = ["Kariba Labs"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "ossdirectory", from = "src/" },
    { include = "resources", from = "src/" },
]
repository = "https://github.com/opensource-observer/oss-directory"
homepage = "https://www.opensource.observer"
documentation = "https://docs.opensource.observer/"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyyaml = "^6.0.1"
jsonschema = "^4.22.0"
gitpython = "^3.1.43"
toml = "^0.10.2"
requests = "^2.32.3"
tabulate = "^0.9.0"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "<0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
ignore = ["src/scripts"]

[tool.ruff]
exclude = ["src/scripts"]
